--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -58,6 +58,7 @@
   --min-typescale: 1.125; /* Major Second */
   --max-typescale: 1.25; /* Major Third */
 
+  --prose-width: 75ch;
   --spacing-content: min(100% - 2rem, var(--container-5xl));
   --container-navigation: 700px; /* Container threshold to switch to mobile navigation */
 
@@ -169,7 +170,7 @@
       background: linear-gradient(
         135deg,
         oklch(1 0 0 / 0.6),
-        oklch(1 0 0 / 0.2)
+        oklch(1 0 0 / 0.3)
       );
       backdrop-filter: blur(var(--blur-md));
       border: 1px solid oklch(1 0 0 / 0.4);
