--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -32,6 +32,11 @@
       margin-top: theme(spacing.3);
     }
 
+    & h4 + *,
+    & h5 + * {
+      margin-top: theme(spacing.2);
+    }
+
     /* Breakout elements */
     & > img,
     & > figure:has(img),
