--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -14,6 +14,11 @@
   font-size: calc(1rem * pow(var(--typescale), --value(integer)));
 }
 
+/* Scales from 16px (text-base) at 800px to 18px (text-lg) at 1000px viewport width */
+@utility text-fluid {
+  font-size: clamp(var(--text-base), 1vw + 0.5rem, var(--text-lg));
+}
+
 /* Change font weight on hover without reflow. */
 @utility weight-on-hover-* {
   display: inline-flex;
