--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -15,8 +15,15 @@
 }
 
 /* Scales from 16px (text-base) at 800px to 18px (text-lg) at 1000px viewport width */
-@utility text-fluid {
+@utility text-prose {
   font-size: clamp(var(--text-base), 1vw + 0.5rem, var(--text-lg));
+}
+
+/* Utility to fit prose content within a max width container. */
+@utility fit-prose {
+  @apply text-prose;
+  margin-inline: auto;
+  width: min(var(--prose-width), 100%);
 }
 
 /* Change font weight on hover without reflow. */
