--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -3,6 +3,25 @@
   @apply ring-blueberry-500 ring-offset-oatmeal-50 ring-[3px] ring-offset-2;
 }
 
+/* Utility to ensure a minimum hitbox for interactive elements. */
+@utility ensure-hitbox {
+  position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    /* 24x24px is WCAG 2.1, to support 2.2 this would need to be 44x44px */
+    min-height: 24px;
+    min-width: 24px;
+    z-index: 9999;
+  }
+}
+
 /* Typescale utility for responsive font sizing based on CSS variables. */
 @utility typescale-* {
   /* Pow only works with numbers, so no clamp. */
