--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -2,8 +2,8 @@
   .prose {
     @apply text-prose;
 
-    font-family: var(--font-body);
-    color: var(--color-text-body);
+    font-family: var(--font-mono);
+    color: var(--color-oatmeal-950);
     line-height: 1.75;
 
     display: grid;
