--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -5,6 +5,7 @@
     font-family: var(--font-mono);
     color: var(--color-oatmeal-950);
     line-height: 1.75;
+    text-box-trim: trim-both;
 
     display: grid;
     grid-template-columns:
