feat: about page (#33)

--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -3,8 +3,9 @@
     @apply text-prose;
 
     font-family: var(--font-mono);
-    color: var(--color-oatmeal-950);
+    color: var(--color-black-900);
     line-height: 1.75;
+    text-box-trim: trim-both;
 
     display: grid;
     grid-template-columns:
