--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,18 +2,39 @@
 @plugin 'tailwind-scrollbar';
 
 @import './theme.css';
-@import './utils.css';
 
-@import './prose.css';
-@import './panel.css';
-
-/* For <CodeBlock> customization. */
-@import './shiki.css';
-@source '../../node_modules/fumadocs-ui/dist/components/codeblock.js';
-
-::selection,
+/* ::selection,
 ::-moz-selection {
   background-color: oklch(0.9 0.1 90 / 0.5);
+} */
+
+/*------------------*/
+/*    Mini Reset    */
+/*------------------*/
+
+* {
+  min-width: 0;
+  text-box: trim cap alphabetic;
+}
+
+:root {
+  interpolate-size: allow-keywords;
+}
+
+html {
+  text-size-adjust: 100%;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  overflow-wrap: break-word;
+  text-wrap: balance;
+}
+
+p {
+  text-wrap: pretty;
 }
 
 @media (prefers-reduced-motion: reduce) {
