--- a/src/css/ui.css
+++ b/src/css/ui.css
@@ -1,7 +1,7 @@
 @utility ui-panel {
   @apply relative overflow-hidden;
   @apply rounded-2xl border border-transparent;
-  @apply shadow-2xl inset-shadow-[0_1px_0_0_rgba(255,255,255,0.2)];
+  @apply inset-shadow-[0_1px_0_0_oklch(0_0_0/0.2)];
   @apply backdrop-blur-xl;
 
   background-clip: padding-box, border-box;
@@ -9,24 +9,9 @@
 
   background-image:
     linear-gradient(
-      to bottom right,
-      oklch(0.19 0.02 268 / 0.6),
-      oklch(0.19 0.02 268 / 0.6)
+      135deg,
+      oklch(from var(--color-background) l c h / 0.5),
+      oklch(from var(--color-background) l c h / 0.5)
     ),
-    linear-gradient(135deg, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.05));
-
-  &::before {
-    @apply pointer-events-none absolute content-[''];
-    @apply inset-0 z-0;
-
-    @apply opacity-75;
-
-    /* The Noise SVG */
-    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='1'/%3E%3C/svg%3E");
-    background-size: 150px 150px;
-    mix-blend-mode: overlay;
-
-    /* Gradient */
-    mask-image: linear-gradient(135deg, black 0%, transparent 100%);
-  }
+    linear-gradient(135deg, oklch(1 0 0 / 0.5), oklch(1 0 0 / 0.1));
 }
