--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -6,7 +6,7 @@
     display: grid;
     grid-template-columns:
       1fr
-      min(var(--prose-width), 100%)
+      min(var(--spacing-content), 100%)
       1fr;
 
     & > * {
