--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,16 @@
 @import './theme.css';
 @import './prose.css';
 
+/*------------------*/
+/* Shiki Highlights */
+/*------------------*/
+
+code[data-theme],
+code span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+}
+
 /* ::selection,
 ::-moz-selection {
   background-color: oklch(0.9 0.1 90 / 0.5);
