better ring color

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -34,6 +34,7 @@
   --color-muted-foreground: var(--color-mist-400);
 
   --color-link: var(--color-mist-50);
+  --color-ring: oklch(0.74 0.10 65);
 
   --spacing-content: min(calc(75ch+calc(theme(spacing.6) * 2)), 100%);
   --spacing-content-padding: theme(spacing.6);
