--- a/src/css/prose.css
+++ b/src/css/prose.css
@@ -1,15 +1,12 @@
 @layer components {
   .prose {
-    font-size: var(--text-scale-0);
-    font-family: var(--font-mono);
-    color: var(--color-black-900);
     line-height: 1.75;
     text-box-trim: trim-both;
 
     display: grid;
     grid-template-columns:
       1fr
-      min(var(--prose-width), 100%)
+      min(var(--spacing-content), 100%)
       1fr;
 
     & > * {
@@ -18,25 +15,31 @@
 
     /* Default spacing */
     & > * + * {
-      margin-top: theme(spacing.8);
+      margin-top: theme(spacing.14);
     }
 
     /* Headlines */
     & > * + h2 {
-      margin-top: theme(spacing.12);
+      margin-top: theme(spacing.16);
     }
     & > * + h3 {
-      margin-top: theme(spacing.10);
+      margin-top: theme(spacing.16);
     }
 
     & h2 + *,
     & h3 + * {
-      margin-top: theme(spacing.3);
+      margin-top: theme(spacing.4);
     }
 
     & h4 + *,
     & h5 + * {
-      margin-top: theme(spacing.2);
+      margin-top: theme(spacing.4);
+    }
+
+    /* Strong */
+    & strong {
+      color: var(--color-accent-foreground);
+      font-weight: 500;
     }
 
     /* Breakout elements */
@@ -51,47 +54,37 @@
     }
 
     /* Lists */
-    & ul {
-      margin: 1rem 0;
+    & :is(ul, ol) {
+      padding-left: 1.5em;
 
       & li {
-        position: relative;
-        padding-left: 1.25em;
-        margin-bottom: 0.5rem;
-        line-height: 1.5;
+        padding-left: 0.5em;
 
-        &::before {
-          content: '•';
-          position: absolute;
-          left: 0;
-          top: 0;
-          font-weight: bold;
-          color: var(--color-black-400);
+        &::marker {
+          color: var(--color-mist-400);
         }
+      }
+
+      & li + li {
+        margin-top: theme(spacing.8);
+      }
+
+      /* Nested lists */
+      & :is(ul, ol) {
+        margin-top: theme(spacing.4);
+      }
+    }
+
+    & ul {
+      list-style-type: disc;
+
+      & ul {
+        list-style-type: circle;
       }
     }
 
     & ol {
-      list-style: none;
-      counter-reset: prose-counter;
-      padding-left: 0;
-      margin: 1rem 0;
-
-      & li {
-        display: flex;
-        align-items: baseline;
-        gap: 0.75rem;
-        counter-increment: prose-counter;
-        margin-bottom: 0.5rem;
-
-        &::before {
-          content: counter(prose-counter) '.';
-          font-weight: bold;
-          color: var(--color-black-400);
-          flex-shrink: 0; /* Prevents number from squishing */
-          min-width: 1ch; /* Align single vs double digits */
-        }
-      }
+      list-style-type: decimal;
     }
   }
 }
